# badi_counts

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.rules  pubspec.yaml
.github/workflows/: firebase-hosting-pull-request.yml
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/badi_counts/: MainActivity.kt
dbos_fct/: dbos-config.yaml  dbos-config.yaml.1734902966525.bak  pyproject.toml  requirements.txt
dbos_fct/badi/: functions.py
dbos_fct/migrations/versions/: 2025_04_06_182032_add_prophet_model_storage.py
functions/: .firebaseignore  firebase.json  main.py  pyproject.toml  requirements.txt  test_script.py  train_model.py
lib/: firebase_options.dart  home_page.dart  main.dart  predictions_page.dart
public/: .htaccess  index.html  manifest.json  robots.txt  service-worker.js  sitemap.xml
test/: widget_test.dart
web/: index.html  manifest.json
web/icons/: site.webmanifest
