[project]
name = "dbos-fct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "dbos>=0.15.0",
    "fastapi>=0.115.6",
    "prophet>=1.1.6",
    "pydantic>=2.10.4",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "uvicorn>=0.34.0",
]
